--- a/quiz.css
+++ b/quiz.css
@@ -9,7 +9,7 @@
 	.title{
 		padding-top: 15px;
 		text-align: center;
-		color:hsl(240, 88%, 69%);
+		color:white;
 	}
 	
 	.container{
@@ -65,6 +65,7 @@
 	.next-btn {
 		border: none;
 		outline: none;
+		color:white;
 		background:hsla(0, 0%, 100%, 0.5); 
 		border-radius: 20px;
 		text-align: center;
