--- a/quiz.css
+++ b/quiz.css
@@ -14,9 +14,10 @@
 	
 	.container{
 		padding-top:10px;
+		max-width:500px;
 		margin-top:20px ;
-		margin-left:30px;
-		margin-right:30px;
+		margin-left:auto;
+		margin-right:auto;
 		align-self: center;
 		background: hsl(180,80%,80%); 
 		border-radius:  20px;
