--- a/quiz.css
+++ b/quiz.css
@@ -51,11 +51,12 @@
 	.answer-btn {
 		border: none;
 		outline: none;
+		width:100px;
 		background:hsla(0, 0%, 100%, 0.5); 
 		border-radius: 20px;
 		text-align: center;
-		margin-left:30%;
-		margin-right:30%;
+		margin-left:auto;
+		margin-right:auto;
 		margin-top:20px;
 		margin-bottom:15px;
 		padding: 20px;
@@ -66,12 +67,13 @@
 	.next-btn {
 		border: none;
 		outline: none;
+		width:100px;
 		color:hsl(242, 70%, 62%);
 		background:hsla(0, 0%, 100%, 0.5); 
 		border-radius: 20px;
 		text-align: center;
-		margin-left:30%;
-		margin-right:30%;
+		margin-left:auto;
+		margin-right:auto;
 		margin-top:15px;
 		padding: 20px;
 		transition-duration: 0.4s;
